<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/search"
        android:showAsAction="always"
        android:title="@string/search"/>
    <item
        android:id="@+id/menu_add_pic"
        android:icon="@drawable/plus64glow"
        android:showAsAction="always"
        android:title="@string/add_pic"/>
    <item
        android:id="@+id/menu_albums"
        android:showAsAction="always"
        android:title="@string/albumi">
        <menu>
            <item
                android:id="@+id/menu_open_album"
                android:icon="@drawable/open_album"
                android:showAsAction="collapseActionView"
                android:title="@string/open_album"/>
            <item
                android:id="@+id/menu_create_album"
                android:icon="@drawable/plus_album"
                android:showAsAction="collapseActionView"
                android:title="@string/create_new_album"/>
            <item
                android:id="@+id/menu_delete_album"
                android:icon="@drawable/minus_album"
                android:showAsAction="collapseActionView"
                android:title="@string/delete_album"/>
            <item
                android:id="@+id/menu_export_album"
                android:icon="@drawable/export_icon"
                android:showAsAction="collapseActionView"
                android:title="@string/export_album"/>
            <item
                android:id="@+id/menu_import_album"
                android:icon="@drawable/import_icon"
                android:showAsAction="collapseActionView"
                android:title="@string/import_album"/>
        </menu>
    </item>
</menu>